[package]
name = "maze-runner"
author = "Adam Kalinowski <adamkali@outlook.com>"
version = "0.1.0"
edition = "2021"
description = "Maze Runner is a for running any executable command as from simple name listed in a configuration file. It is intended to be used as a tool for neovim, but can be used as a standalone tool as well. you can think of it as npm run but for any executable command."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"

[[bin]]
name = "mr"
path = "src/main.rs"
